--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,13 +1,34 @@
 <h1>Admin Users</h1>
 
-<table>
-  <tr>
+<%= render_table do %>
+  <%= table_head do %>
+    <%= table_header "First Name" %>
+    <%= table_header "Last Name" %>
+    <%= table_header "Email" %>
+    <%= table_header "Role" %>
+    <%= table_header "Approval" %>
+    <%= table_header "" %>
+    <%= table_header "" %>
+  <% end %>
+  <%= table_body do %>
     <% @users.each do |user| %>
-      <td><%= user.first_name %></td>
-      <td><%= user.last_name %></td>
-      <td><%= user.email %></td>
-      <td><%= user.role %></td>
-      <td><%= user.approved %></td>
+      <%= table_row do %>
+        <%= table_column user.first_name %>
+        <%= table_column user.last_name %>
+        <%= table_column user.email %>
+        <%= table_column do %>
+          <%= form_for(user, url: admin_user_role_path(user), method: :patch, data: { controller: 'auto-submit' } ) do |f| %>
+            <%= f.select :role, ["standard", "admin"], { }, { data: { action: "auto-submit#submit" } } %>
+          <% end %>
+        <% end %>
+        <%= table_column user.approved %>
+        <%= table_column do %>
+          <%= link_to "Edit" %>
+        <% end %>
+        <%= table_column do %>
+          <%= link_to "Delete" %>
+        <% end %>
+      <% end %>
     <% end %>
-  </tr>
-</table>
+  <% end %>
+<% end %>
