--- a/app/views/admin/users/_approved_form.html.erb
+++ b/app/views/admin/users/_approved_form.html.erb
@@ -1,3 +1,3 @@
-<%= form_for(user, url: admin_approve_role_path(user), method: :patch, data: { controller: 'auto-submit' } ) do |f| %>
-  <%= f.check_box :approved, { data: { action: 'auto-submit#submit' }}, "true", "false" %>
+<%= form_for(user, url: admin_approve_role_path(user), method: :patch, data: { controller: 'auto-submit' }, html: { id: "approve_form_#{user.id}" }) do |f| %>
+  <%= f.check_box :approved, { data: { action: 'auto-submit#submit' }, id: "approved_checkbox_#{user.id}" }, "true", "false" %>
 <% end %>
