--- a/app/views/admin/users/_edit_user_form.html.erb
+++ b/app/views/admin/users/_edit_user_form.html.erb
@@ -3,22 +3,22 @@
     <%= render_button "Edit account", variant: :outline %>
   <% end %>
   <%= dialog_content do %>
-    <%= render_form_for(user, url: admin_user_path(user), method: :put, class: 'flex flex-col gap-4') do |f| %>
+    <%= render_form_for(user, url: admin_user_path(user), method: :put, class: 'flex flex-col gap-4', html: { id: "edit_form_#{user.id}" }) do |f| %>
       <div class="flex h-fit w-full flex-row gap-2">
         <div class="w-1/2">
           <%= f.label :first_name, required: true %>
-          <%= f.text_field :first_name, autocomplete: "name" %>
+          <%= f.text_field :first_name, autocomplete: "name", id: "user_#{user.id}_first_name" %>
           <%= f.error_message :first_name %>
         </div>
         <div class="w-1/2">
           <%= f.label :last_name %>
-          <%= f.text_field :last_name, autocomplete: "name" %>
+          <%= f.text_field :last_name, autocomplete: "name", id: "user_#{user.id}_last_name" %>
           <%= f.error_message :last_name %>
         </div>
       </div>
 
       <%= f.label :email, required: true %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "user_#{user.id}_email" %>
 
       <%= f.submit "Update" %>
     <% end %>
