--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,11 +3,7 @@
 <%= render partial: 'create_user_form', locals: { user: @user } %>
 
 <ul class="flex flex-row gap-2 p-2">
-  <li><%= link_to "All", admin_users_path %></li>
-  <li><%= link_to "Pending", admin_users_path(filter: 'pending')  %></li>
-  <li><%= link_to "Approved", admin_users_path(filter: 'approved') %></li>
-  <li><%= link_to "Admins", admin_users_path(filter: 'admins') %></li>
-  <li><%= link_to "Standards", admin_users_path(filter: 'standards') %></li>
+  <%= render partial: 'users_filters' %>
 </ul>
 
 <%= render_table do %>
