--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,3 +1,7 @@
+<%= link_to root_path, class: "p-4" do %>
+  <i class="fa fa-arrow-left"></i>
+<% end %>
+
 <h1>Transactions</h1>
 
 <table>
@@ -7,6 +11,7 @@
       <td><%= transaction.symbol %></li>
       <td><%= transaction.transaction_type %></li>
       <td><%= transaction.price %></li>
+      <td><%= transaction.amount %></li>
       <td><%= transaction.currency %></li>
     </tr>
   <% end %>
