refactor: add caching and content loading to stocks articles
- create dedicated controller to display stocks articles
- add content loading when displaying articles
- add stocks concern to format and cache articles

--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -20,6 +20,10 @@
   <%= link_to "Sell", new_transaction_path(transaction_type: 'sell'), method: :get, class: "button button-primary" %>
 </div>
 
+<%= turbo_frame_tag :stocks_articles, src: stocks_articles_path do %>
+  Loading...
+<% end %>
+
 <%= turbo_frame_tag :stocks_tables, src: stocks_tables_path(filter: params[:filter]) do %>
   Loading...
 <% end %>
