fix: address bugs when navigating to a stock
- pass stock id as the symbol param to fix error where no symbol was
  being passed and stock articles fallsback to the default request
- add data-turbo false attribute to fix error where the get request was
  being submitted as a turbo frame

--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -32,7 +32,7 @@
     <%= @stock[:company].description %>
   </div>
 
-  <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path(symbol: params[:symbol]) do %>
+  <%= turbo_frame_tag :stocks_articles, src: stocks_articles_path(symbol: params[:id]) do %>
     Loading...
   <% end %>
   
