--- a/app/views/stocks_tables/show.html.erb
+++ b/app/views/stocks_tables/show.html.erb
@@ -6,7 +6,7 @@
         <div class="flex items-center space-x-2">
           <%= image_tag(stock[:logo_url], width: 20, height: 20) if stock[:logo_url].present? %>
           <div class="flex flex-col justify-center">
-            <%= link_to stock[:company_name], stock_path(stock[:symbol]), class: "font-semibold" %>
+            <%= link_to stock[:company_name], stock_path(stock[:symbol]), class: "font-semibold", data: { turbo: false } %>
             <span class="text-sm text-red-500"><%= stock[:symbol] %></span>
           </div>
         </div>
