--- a/app/views/admin/transactions/index.html.erb
+++ b/app/views/admin/transactions/index.html.erb
@@ -1,14 +1,17 @@
 <h1>Admin Transactions</h1>
 
 <table>
-  <% @transactions.each do |transaction| %>
-    <tr>
-      <td><%= transaction.id %></li>
-      <td><%= transaction.symbol %></li>
-      <td><%= transaction.transaction_type %></li>
-      <td><%= transaction.price %></li>
-      <td><%= transaction.currency %></li>
-    </tr>
-  <% end %>
+  <tbody>
+    <% @transactions.each do |transaction| %>
+        <tr>
+          <td><%= transaction.id %></td>
+          <td><%= transaction.symbol %></td>
+          <td><%= transaction.transaction_type %></td>
+          <td><%= transaction.price %></td>
+          <td><%= transaction.user_id %></td> 
+          <td><%= transaction.created_at %></td>
+          <td><%= link_to "Show", admin_transaction_path(transaction) %>
+        </tr>
+    <% end %>
+  </tbody>
 </table>
-
