refactor: replace amount with quantity in transactions and rename transaction concerns

--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -7,11 +7,11 @@
     <%= form.label :price, "Price" %>
     <%= form.text_field :price %>
     
-    <%= form.label :amount, "Currency" %>
+    <%= form.label :currency, "Currency" %>
     <%= form.text_field :currency %>
 
-    <%= form.label :amount, "Amount" %>
-    <%= form.text_field :amount %>
+    <%= form.label :quantity, "Quantity" %>
+    <%= form.text_field :quantity %>
 
     <%= form.hidden_field :transaction_type, class: "form-control" %>
 
