--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -11,7 +11,7 @@
       <td><%= transaction.symbol %></li>
       <td><%= transaction.transaction_type %></li>
       <td><%= transaction.price %></li>
-      <td><%= transaction.amount %></li>
+      <td><%= transaction.quantity %></li>
       <td><%= transaction.currency %></li>
     </tr>
   <% end %>
