--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -15,6 +15,6 @@
 
     <%= form.hidden_field :transaction_type, class: "form-control" %>
 
-    <%= form.submit transaction_type.capitalize, class: "p-4 cursor-pointer button button-primary" %>
+    <%= form.submit transaction.transaction_type.capitalize, class: "p-4 cursor-pointer button button-primary" %>
   </div>
 <% end %>
