--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -3,6 +3,8 @@
   <div class="flex flex-col justify-center p-4">
     <%= form.label :symbol, "Search Stock Symbol" %>
     <%= form.text_field :symbol, class: "form-control" %>
+
+    <%= render_combobox %>
     
     <%= form.label :price, "Price" %>
     <%= form.text_field :price %>
