--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   </head>
 
+  <header>
+    <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-6" aria-label="Global">
+      <div class="flex lg:flex-1">
+        <%= link_to "Trading App", root_path %>
+      </div>
+      <%= render 'components/navbar/admin' %>
+    </nav>
+  </header>
   <body class="flex h-full w-full min-h-screen flex-col">
     <% if notice %>
       <%= render_toast id: "default_toast", description: notice %>
