feat: create user navbar

--- a/app/views/components/navbar/_nav_menu_mobile.html.erb
+++ b/app/views/components/navbar/_nav_menu_mobile.html.erb
@@ -15,6 +15,7 @@
         <% active_link = (request.path == link[:path]) ? "text-foreground" : "" %>
         <%= link_to link[:name], link[:path], class: active_link %>
       <% end %>
+      <%= render 'components/navbar/shared_buttons' %>
     </div>
   <% end %>
 <% end %>    
