--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <div class="flex justify-between">
-  <%= render "form", transaction: @transaction %>
+  <%= render "form", transaction: @transaction, items: @stocks %>
   
   <div class="p-4">
     <h1 class="py-4">Portfolio:</h1>
