--- a/app/assets/stylesheets/shadcn.css
+++ b/app/assets/stylesheets/shadcn.css
@@ -12,7 +12,7 @@
 		--secondary-foreground: 222.2 47.4% 11.2%;
 		--muted: 210 40% 96.1%;
 		--muted-foreground: 215.4 16.3% 46.9%;
-		--accent: 202,92.1%,49.4%;
+		--accent: 0 66.2% 96.1%;
 		--accent-foreground: 222.2 47.4% 11.2%;
 		--destructive: 0 66.1% 56.1%;;
 		--destructive-foreground: 210 40% 98%;
