--- a/app/views/admin/users/_users_filters.html.erb
+++ b/app/views/admin/users/_users_filters.html.erb
@@ -1,5 +1,22 @@
-<li><%= link_to "All", admin_users_path %></li>
-<li><%= link_to "Pending", admin_users_path(filter: 'pending')  %></li>
-<li><%= link_to "Approved", admin_users_path(filter: 'approved') %></li>
-<li><%= link_to "Admins", admin_users_path(filter: 'admins') %></li>
-<li><%= link_to "Standards", admin_users_path(filter: 'standards') %></li>
+<% filters = [
+  { name: 'All' },
+  { name: 'Pending', filter: 'pending' },
+  { name: 'Approved', filter: 'admins' },
+  { name: 'Standards', filter: 'standards' }
+] %>
+
+<div class='flex flex-row gap-4 w-full'>
+  <% filters.each do |link| %>
+    <%# render_button link[:name], 
+      href: admin_users_path(filter: link[:filter]), 
+      method: :get, 
+      variant: :outline, 
+      class: 'rounded-3xl w-24' %>
+    <%= render_button link[:name], 
+      as: :link, 
+      href: admin_users_path(filter: link[:filter]),
+      variant: :outline,
+      class: 'rounded-3xl w-24'
+    %>
+  <% end %>
+</div>
