--- a/app/views/admin/users/_delete_user_form.html.erb
+++ b/app/views/admin/users/_delete_user_form.html.erb
@@ -1,7 +1,7 @@
 <%= render_form_for("delete_user", url: admin_user_path(user), method: :delete) do |f| %>
   <%= render_dialog do %>
     <%= dialog_trigger do %>
-      <%= render_button "Delete account", variant: :destructive, class: 'w-full' %>
+      <i class="fa fa-trash cursor-pointer hover:text-destructive"></i>
     <% end %>
 
     <%= dialog_content do %>
