fix: add approved and admins filters

--- a/app/views/admin/users/_users_filters.html.erb
+++ b/app/views/admin/users/_users_filters.html.erb
@@ -1,7 +1,8 @@
 <% filters = [
   { name: 'All' },
   { name: 'Pending', filter: 'pending' },
-  { name: 'Approved', filter: 'admins' },
+  { name: 'Approved', filter: 'approved' },
+  { name: 'Admins', filter: 'admins' },
   { name: 'Standards', filter: 'standards' }
 ] %>
 
