style: add interface to user page from admin dashboard
- retrieve user transactions in show controller
- create user details cards
- create user transactions

--- a/app/views/components/ui/_card.html.erb
+++ b/app/views/components/ui/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="relative rounded-lg ring-1 ring-white/5 text-card-foreground shadow-sm w-[350px] <%= options[:class] %>">
+<div class="relative rounded-lg ring-1 ring-black/5 text-card-foreground shadow-sm w-[350px] <%= options[:class] %>">
   <% if title || subtitle %>
   <div class="relative flex flex-col space-y-1.5 p-6 z-10">
     <% if title %>
@@ -16,5 +16,4 @@
     <%= body %>
   <% end %>
   <% if footer %><footer class="relative mx-6 mb-6 z-10"><%= footer %></footer><% end %>
-  <div class="absolute top-0 left-0 h-full w-full rounded-lg bg-white/5 opacity-20 blur-sm z-0"></div>
 </div>
