refactor: move padding styles to global layout

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col h-full w-full gap-4 p-6">
+<div class="flex flex-col h-full w-full gap-4">
   <div>
     <%= link_to admin_users_path, class: "text-muted-foreground" do %>
       <i class="fa fa-arrow-left"></i>
