--- a/app/views/components/text/_header.html.erb
+++ b/app/views/components/text/_header.html.erb
@@ -1,4 +1,3 @@
-<h1 
-  class="mt-6 text-center text-3xl font-bold tracking-tight text-muted-foreground">
+<h1 class="text-3xl font-bold tracking-tight text-secondary">
   <%= yield %>
 </h1>
