--- a/app/views/components/ui/_filter.html.erb
+++ b/app/views/components/ui/_filter.html.erb
@@ -3,18 +3,19 @@
   <div class="flex items-center">
   <%= content_for :filter_icon %>
   <%= render_input name: "filter", 
-    placeholder: "Filter items...", 
+    placeholder: options[:placeholder], 
     variant: :borderless, 
     class: input_class, 
     data: {"ui--filter-target": "source", 
-      action: "focus->ui--filter#showItems input->ui--filter#filter"} %>
+      "action": "focus->ui--filter#showItems input->ui--filter#filter",
+      "value": ""} %>
   </div>
   <%= render_separator %>
   <div class="hidden <%= options[:class] %>" data-ui--filter-target="items">
     <%= content_tag :div, role: "group" do
       items.each do |item| %>
         <div data-ui--filter-target="item">
-          <%= list_item(value: item[:value], name: item[:name], selected: item[:selected], action: "click->ui--filter#selectItem") %>
+          <%= list_item(value: item[:value], name: item[:name], selected: item[:selected], action: "click->ui--filter#selectItem " + options[:data][:action]) %>
         </div>
       <% end
     end %>
