--- a/app/views/components/ui/_filter.html.erb
+++ b/app/views/components/ui/_filter.html.erb
@@ -15,7 +15,7 @@
     <%= content_tag :div, role: "group" do
       items.each do |item| %>
         <div data-ui--filter-target="item">
-          <%= list_item(value: item[:value], name: item[:name], selected: item[:selected], action: "click->ui--filter#selectItem " + options[:data][:action]) %>
+          <%= list_item(value: item[:value], name: item[:name], selected: item[:selected], action: "click->ui--filter#selectItem") %>
         </div>
       <% end
     end %>
