--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,9 @@
   <body class="flex h-full w-full min-h-screen flex-col p-6 lg:p-12">
     <header>
       <nav class="mx-auto flex items-center justify-between mb-12" aria-label="Global">
-        <div class="flex lg:flex-1">
+        <div class="flex lg:flex-1 gap-1 items-center">
           <%= render 'components/navbar/logo' %>
+          <span class="font-bold text-xl text-gray-300">Finance</span>
         </div>
         <% if current_user.present? && current_user.role == 'admin' %>
           <%= render 'components/navbar/admin' %>
