--- a/app/views/stocks_tables/show.html.erb
+++ b/app/views/stocks_tables/show.html.erb
@@ -1,20 +1,7 @@
+<%= turbo_frame_tag 'market_trends_frame' do %>
+  <%= render "stocks", stocks: @stocks %>
+<% end %>
+
 <%= turbo_frame_tag :stocks_tables do %>
-  <div class="container mt-6 p-4">
-    <h2 class="text-red-500"><%= @name %></h2>
-    <% @stocks.each do |stock| %>
-      <div class="flex justify-between w-full space-x-4 p-4">
-        <div class="flex items-center space-x-2">
-          <%= image_tag(stock[:logo_url], width: 20, height: 20) if stock[:logo_url].present? %>
-          <div class="flex flex-col justify-center">
-            <%= link_to stock[:company_name], stock_path(stock[:symbol]), class: "font-semibold", data: { turbo: false } %>
-            <span class="text-sm text-red-500"><%= stock[:symbol] %></span>
-          </div>
-        </div>
-        <div class="flex flex-col justify-center">
-          <div><%= number_to_currency(stock[:price], precision: 2) %></div>
-          <%= content_tag :div, stock[:change], class: stock[:change].to_f < 0 ? "text-red-500" : "text-green-500" %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+  <%= render "stocks", stocks: @stocks %>
 <% end %>
