style: add custom styles to stocks search form

--- a/app/views/stocks_search/_form.html.erb
+++ b/app/views/stocks_search/_form.html.erb
@@ -1,5 +1,15 @@
-<%= form_with url: stocks_search_path, method: :get do |f| %>
-  <%= f.text_field :query %>
+<%= render_card class: 'h-fit' do %>
+  <%= form_with url: stocks_search_path, 
+    method: :get, 
+    data: { controller: 'auto-submit' },
+    class: 'flex items-center' do |f| %>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2 h-4 w-4 shrink-0 opacity-50 ml-2"><circle cx="11" cy="11" r="8"></circle><line x1="21" x2="16.65" y1="21" y2="16.65"></line></svg>
+    <%= render_input name: 'query',
+      placeholder: 'Search stocks',
+      variant: :borderless,
+      data: { action: 'input->auto-submit#submit' } %>
+  <% end %>
+  <%= render_separator %>
   <turbo-frame id="suggestions">
     <%= render partial: 'stocks_search/suggestions', locals: { 
       suggestions: @suggestions } %>
