--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TradingApp</title>
+    <title>Avion Finance</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,12 +12,12 @@
     <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   </head>
 
-  <body class="flex h-full w-full min-h-screen flex-col p-6 lg:p-12">
-    <header>
-      <nav class="mx-auto flex items-center justify-between mb-12" aria-label="Global">
-        <div class="flex lg:flex-1 gap-1 items-center">
+  <body class="flex h-full w-full min-h-screen flex-col p-6 lg:p-12 lg:pt-24">
+    <header data-controller="header-shadow" class="fixed top-0 left-0 w-full bg-white z-50">
+      <nav class="container mx-auto flex items-center justify-between p-4 lg:px-12" aria-label="Global">
+        <div class="flex flex-1 gap-1 items-center">
           <%= render 'components/navbar/logo' %>
-          <span class="font-bold text-xl text-gray-300">Finance</span>
+          <span class="font-semibold text-xl text-gray-800">Finance</span>
         </div>
         <% if current_user.present? && current_user.role == 'admin' %>
           <%= render 'components/navbar/admin' %>
@@ -26,6 +26,7 @@
         <% end %>
       </nav>
     </header>
+
     <% if notice %>
       <%= render_toast id: "default_toast", description: notice %>
     <% end %>
@@ -34,7 +35,11 @@
       <%= render_toast description: alert, id: "alert_toast", variant: :destructive %>
     <% end %>
 
-    <%= yield %>
+    <div class="mt-16 lg:mt-0">
+      <%= yield %>
+    </div>
+    
   </body>
+
 </html>
 
