--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,1 +1,45 @@
-<h1>Portfolio</h1>
+<div class="w-full mb-6 font-thin text-xs hover:underline">
+  <%= render_breadcrumbs :separator => ' > ' %>
+</div>
+
+<h1 class="text-3xl font-bold mb-6">My Portfolio</h1>
+
+<div class="flex flext-col gap-2">
+  <%= render_card title: "#{number_to_currency(@total_value, precision: 2)}" do %>
+    <%= area_chart @chart_data, discrete: true, library: { curve: true, hAxis: { title: 'Stock Symbol' }, vAxis: { title: 'Value' } } %>
+  <% end %>
+
+  <%= render_card title: "Portfolio Overview", class: "w-full p-4" do %>
+    <% if @portfolio.present? %>
+      <table class="min-w-full w-full divide-y divide-gray-200">
+        <thead class="border-b">
+          <tr>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Symbol</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Company Name</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Price</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Quantity</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Change</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Day Gain</th>
+            <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Value</th>
+          </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+          <% @portfolio.each do |stock| %>
+            <tr class="border-b">
+              <td class="px-6 py-4 whitespace-nowrap font-semibold"><%= stock[:symbol] %></td>
+              <td class="px-6 py-4 whitespace-nowrap"><%= stock[:name] %></td>
+              <td class="px-6 py-4 whitespace-nowrap"><%= number_to_currency(stock[:price], precision: 2) %></td>
+              <td class="px-6 py-4 whitespace-nowrap"><%= stock[:quantity] %></td>
+              <td class="px-6 py-4 whitespace-nowrap"><%= content_tag :div, stock[:change], class: stock[:change].to_d < 0 ? "text-red-500" : "text-green-500" %></td>
+              <td class="px-6 py-4 whitespace-nowrap"><%= content_tag :div, "#{stock[:day_gain]}%", class: stock[:day_gain].to_f < 0 ? "text-red-500" : "text-green-500" %></td>
+              <td class="px-6 py-4 whitespace-nowrap"><%= number_to_currency(stock[:value], precision: 2) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+
+    <% else %>
+      <p class="text-gray-500">Your portfolio is empty.</p>
+    <% end %>
+  <% end %>
+</div>
