--- a/app/views/stocks_articles/show.html.erb
+++ b/app/views/stocks_articles/show.html.erb
@@ -1,16 +1,15 @@
 <%= turbo_frame_tag :stocks_articles do %>
-    <div>
-      <% @news_feed.each do |article| %>
-        <div class="flex justify-between border-b border-b-gray-200 py-2 gap-4">
-          <div class="flex flex-col py-4">
-            <div class="flex text-xs text-gray-300 gap-2">
-              <h2><%= article[:source] %></h2> |
-              <span><%= time_ago(article[:datetime]) %></span>
-            </div>
-            <h1 class="font-semibold"><%= article[:headline] %></h1>
-          </div>
-          <%= image_tag(article[:image], class: "h-24 w-24 object-cover rounded") %>
+  <% @news_feed.each do |article| %>
+      <div class='flex flex-col md:flex-row justify-between p-4 gap-4'> 
+      <div class="flex flex-col">
+        <div class="flex text-xs text-muted-foreground gap-2">
+          <h2><%= article[:source] %></h2> |
+          <span><%= time_ago(article[:datetime]) %></span>
         </div>
-      <% end %>
-    </div>
+        <h1 class="font-medium"><%= article[:headline] %></h1>
+      </div>
+      <%= image_tag(article[:image], src: article[:image_url], class: "h-auto w-full md:w-24 object-cover rounded") %>
+    </div> 
+    <%= render_separator class: 'my-4' %>
+  <% end %>
 <% end %>
